--- a/Toujas_Tort.qmd
+++ b/Toujas_Tort.qmd
@@ -2,6 +2,12 @@
 title: "Toujas-Tort"
 format: html
 editor: visual
+repo-url : https://github.com/Lou-Ann83/test-grades.git
 ---
 
-## 
+## Intro
+
+```{r}
+here::i_am()
+```
+
