--- a/Toujas_Tort.qmd
+++ b/Toujas_Tort.qmd
@@ -51,3 +51,11 @@ ggplot(nb_student_per_grp, aes(x=n, y=group))+
   geom_col()
 ```
 
+## Question 6
+
+```{r}
+Gender_balance <- students |> count(group,sex)
+ggplot(Gender_balance, aes(x = group,y=n, fill = sex))+
+      geom_col(position = "fill")
+```
+
